# pyzettle

./: .gitignore  README.md  pyproject.toml
pyzettle/: __init__.py
pyzettle/authenticate/: __init__.py
pyzettle/finance/: finanace_v2.ipynb  finance.ipynb
pyzettle/payments/: __init__.py  drop_columns.py
tests/: authenticate.ipynb  payments_test.ipynb
